Resolves: tdf#128802 manage dnd ourself

instead of relying on the built-in dnd which is allowing
toplevel entries to be dropped on other ones to become
children of another entry, which is not what we want here.

Change-Id: I8c5528d9b26e994b7eda9d2972af0b3783187f3e